# storagePrototype

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean_build_run_debug.sh  run_benchmarks.sh  run_tests.sh
include/common/: checksum.h  config.h  file_handle.h  logger.h  types.h
include/page/: page.h  page_view.h
include/schema/: alignment.h  schema.h
include/storage/: disk_manager.h  free_space_map.h  page_manager.h
include/tuple/: field_value.h  tuple_accessor.h  tuple_builder.h  tuple_header.h  tuple_serializer.h
src/: main.cpp
src/common/: checksum.cpp  file_handle.cpp  logger.cpp
src/page/: page.cpp  page_view.cpp
src/schema/: alignment.cpp  schema.cpp
src/storage/: disk_manager.cpp  free_space_map.cpp  page_manager.cpp
src/tuple/: field_value.cpp  tuple_accessor.cpp  tuple_builder.cpp  tuple_header.cpp  tuple_serializer.cpp
test/: CMakeLists.txt  alignment_test.cpp  checksum_test.cpp  crud_integration_test.cpp  disk_manager_test.cpp  field_value_test.cpp  file_handle_test.cpp  free_space_map_test.cpp  logger_test.cpp  page_compaction_test.cpp  page_insertion_test.cpp  page_manager_test.cpp  page_test.cpp  page_update_test.cpp  sample_test.cpp  schema_test.cpp  slot_directory_test.cpp  tuple_accessor_test.cpp  tuple_builder_test.cpp  tuple_header_test.cpp  tuple_integration_test.cpp  tuple_serializer_test.cpp  types_test.cpp
